Version 2.2.6
--------------------------------------------------------------------------
+ Fixed bug with editing Multimedia. Reported by alar.

Version 2.2.5
---------------------------------------------------------------------------
+ Fixed bug that displayed error message on document upload.
+ Proper error message now on document uploaded to unwritable
  directory
+ Directory check on unwritable directory prevents upload link

Version 2.2.4
---------------------------------------------------------------------------
30 March 2009
+ Error checking added to document upload.
+ Fixed multimedia folder pager.

25 March 2009
+ Added file type limits to fckeditor

23 March 2009
+ Added method for fixing document directories
+ Added file search to folder pager
+ Added document FCKeditor interaction
+ Cleaned up interface
+ Updated:
javascript/fckeditor/head.js
templates/fckeditor.tpl
templates/fckdocuments.tpl
templates/fck.css
templates/fckimages.tpl
templates/fckfolders.tpl
templates/folder_list.tpl
templates/settings.tpl


20 March 2009
+ Started building FCKeditor interaction
+ Updated:
img/folder.gif, javascript/fckeditor/*
templates/fck.css, templates/fckeditor.tpl, templates/fckfolders.tpl,
templates/fckimages.tpl

Version 2.2.3
---------------------------------------------------------------------------
25 February 2009
+ Fixed document delete link

Version 2.2.2
---------------------------------------------------------------------------
10 February 2009
+ Fixed edit icon in document view. Needed to be salted.
+ Small template changes (same as yesterday)

9 February 2009
+ Added error check to prevent possible divide by zero error.
+ Resized mime type icons
+ Changed the document download windows. Simplified.
+ Updated: img/mime_types/*
templates/document_download.tpl, templates/file_view.css,
templates/multi_doc_download.tpl


30 January 2009
+ Fixed image edit link.

29 January 2009
+ Added pptm to known types.

22 January 2009