@@ -539,9 +539,13 @@ Example: mkdir phpwebsite/files/filecabinet/incoming/</pre>';
 + Directory check on unwritable directory prevents upload link</pre>';
 
     case version_compare($version, '2.2.6', '<'):
-        $content[] = '<pre>2.2.6 changes
+        $content[] = '<pre>';
+        $files = array('javascript/fckeditor/head.js', 'templates/fck.css');
+        fc_updatefiles($files, $content);
+        $content[] = '2.2.6 changes
 -----------------------
 + Fixed bug with editing Multimedia.
++ Fixed bug with File Cabinet in FCKeditor not loading folders properly.
 </pre>';
 
     }
